add -q in notebook

--- a/example/rater/huggingface_classification.ipynb
+++ b/example/rater/huggingface_classification.ipynb
@@ -25,54 +25,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: transformers in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (4.36.2)\n",
-      "Requirement already satisfied: accelerate in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (0.25.0)\n",
-      "Requirement already satisfied: bitsandbytes in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (0.41.3.post2)\n",
-      "Requirement already satisfied: scipy in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (1.11.4)\n",
-      "Requirement already satisfied: filelock in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from transformers) (3.13.1)\n",
-      "Requirement already satisfied: huggingface-hub<1.0,>=0.19.3 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from transformers) (0.20.1)\n",
-      "Requirement already satisfied: numpy>=1.17 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from transformers) (1.26.2)\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from transformers) (23.2)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from transformers) (6.0.1)\n",
-      "Requirement already satisfied: regex!=2019.12.17 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from transformers) (2023.12.25)\n",
-      "Requirement already satisfied: requests in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from transformers) (2.31.0)\n",
-      "Requirement already satisfied: tokenizers<0.19,>=0.14 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from transformers) (0.15.0)\n",
-      "Requirement already satisfied: safetensors>=0.3.1 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from transformers) (0.4.1)\n",
-      "Requirement already satisfied: tqdm>=4.27 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from transformers) (4.66.1)\n",
-      "Requirement already satisfied: psutil in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from accelerate) (5.9.7)\n",
-      "Requirement already satisfied: torch>=1.10.0 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from accelerate) (2.1.2)\n",
-      "Requirement already satisfied: fsspec>=2023.5.0 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.19.3->transformers) (2023.12.2)\n",
-      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from huggingface-hub<1.0,>=0.19.3->transformers) (4.9.0)\n",
-      "Requirement already satisfied: sympy in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from torch>=1.10.0->accelerate) (1.12)\n",
-      "Requirement already satisfied: networkx in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from torch>=1.10.0->accelerate) (3.2.1)\n",
-      "Requirement already satisfied: jinja2 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from torch>=1.10.0->accelerate) (3.1.2)\n",
-      "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.1.105 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from torch>=1.10.0->accelerate) (12.1.105)\n",
-      "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.1.105 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from torch>=1.10.0->accelerate) (12.1.105)\n",
-      "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.1.105 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from torch>=1.10.0->accelerate) (12.1.105)\n",
-      "Requirement already satisfied: nvidia-cudnn-cu12==8.9.2.26 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from torch>=1.10.0->accelerate) (8.9.2.26)\n",
-      "Requirement already satisfied: nvidia-cublas-cu12==12.1.3.1 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from torch>=1.10.0->accelerate) (12.1.3.1)\n",
-      "Requirement already satisfied: nvidia-cufft-cu12==11.0.2.54 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from torch>=1.10.0->accelerate) (11.0.2.54)\n",
-      "Requirement already satisfied: nvidia-curand-cu12==10.3.2.106 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from torch>=1.10.0->accelerate) (10.3.2.106)\n",
-      "Requirement already satisfied: nvidia-cusolver-cu12==11.4.5.107 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from torch>=1.10.0->accelerate) (11.4.5.107)\n",
-      "Requirement already satisfied: nvidia-cusparse-cu12==12.1.0.106 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from torch>=1.10.0->accelerate) (12.1.0.106)\n",
-      "Requirement already satisfied: nvidia-nccl-cu12==2.18.1 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from torch>=1.10.0->accelerate) (2.18.1)\n",
-      "Requirement already satisfied: nvidia-nvtx-cu12==12.1.105 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from torch>=1.10.0->accelerate) (12.1.105)\n",
-      "Requirement already satisfied: triton==2.1.0 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from torch>=1.10.0->accelerate) (2.1.0)\n",
-      "Requirement already satisfied: nvidia-nvjitlink-cu12 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from nvidia-cusolver-cu12==11.4.5.107->torch>=1.10.0->accelerate) (12.3.101)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from requests->transformers) (3.3.2)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from requests->transformers) (3.6)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from requests->transformers) (2.1.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from requests->transformers) (2023.11.17)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from jinja2->torch>=1.10.0->accelerate) (2.1.3)\n",
-      "Requirement already satisfied: mpmath>=0.19 in /home/zayn/miniconda3/envs/uniflow/lib/python3.10/site-packages (from sympy->torch>=1.10.0->accelerate) (1.3.0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
@@ -83,7 +36,7 @@
     "sys.path.append(\"..\")\n",
     "sys.path.append(\"../..\")\n",
     "\n",
-    "!{sys.executable} -m pip install transformers accelerate bitsandbytes scipy"
+    "!{sys.executable} -m pip install -q transformers accelerate bitsandbytes scipy"
    ]
   },
   {
