fix: resolve comments in pr

--- a/example/llm/sagemaker_deploy_mistral.ipynb
+++ b/example/llm/sagemaker_deploy_mistral.ipynb
@@ -33,10 +33,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install Extra Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "!{sys.executable} -m pip install -q boto3\n",
+    "!{sys.executable} -m pip install -q huggingface-hub"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Import dependency\n",
     "First, we import libraries and create a boto3 session. We will use the default profile here, but you can also specify a profile name."
@@ -44,18 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
-      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ubuntu/.config/sagemaker/config.yaml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import glob\n",
     "import json\n",
@@ -63,8 +71,7 @@
     "from datetime import datetime\n",
     "from pathlib import Path\n",
     "\n",
-    "import boto3\n",
-    "import sagemaker"
+    "import boto3"
    ]
   },
   {
@@ -90,15 +97,6 @@
    "source": [
     "### Download model\n",
     "We will download the model from the Hugging Face Hub. You can find the model in the [model hub](https://huggingface.co/mistralai/Mistral-7B-Instruct-v0.2). For this example, we will use the `mistralai/Mistral-7B-Instruct-v0.2` model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install huggingface-hub -Uqq"
    ]
   },
   {
@@ -346,15 +344,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Deploy model\n",
     "Next, we deploy the model to an endpoint. There will be 3 steps to this process:\n",
+    "\n",
     "First, we create a model in SageMaker. This will be a reference to the model artifacts in S3.\n",
+    "\n",
     "Second, we create an endpoint configuration. This will be a reference to the model in SageMaker.\n",
+    "\n",
     "Third, we create an endpoint. SageMaker will spin up an instance to host the model."
    ]
   },
