--- a/example/llm/sagemaker_deploy.ipynb
+++ b/example/llm/sagemaker_deploy.ipynb
@@ -33,10 +33,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Install Extra Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: {sys.executable}: command not found\n",
+      "/bin/bash: {sys.executable}: command not found\n"
+     ]
+    }
+   ],
+   "source": [
+    "!{sys.executable} -m pip install -q boto3\n",
+    "!{sys.executable} -m pip install -q sagemaker"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Import dependency\n",
     "First, we import libraries and create a boto3 session. We will use the default profile here, but you can also specify a profile name."
@@ -44,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,6 +155,11 @@
     "        PolicyArn=\"arn:aws:iam::aws:policy/AmazonSageMakerFullAccess\",\n",
     "    )\n",
     "\n",
+    "    attach_policy_response = iam_client.attach_role_policy(\n",
+    "        RoleName=role_name,\n",
+    "        PolicyArn=\"arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess\",\n",
+    "    )\n",
+    "\n",
     "    print(f\"IAM Role '{role_name}' created successfully!\")\n",
     "\n",
     "    role_arn = create_role_response[\"Role\"][\"Arn\"]\n",
@@ -147,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,10 +193,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Deploy model\n",
     "Next, we deploy the model to an endpoint. We will use the default instance type ml.g5.4xlarge here, but you can also specify a different instance type."
@@ -175,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,28 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "llm image uri: 763104351884.dkr.ecr.us-west-2.amazonaws.com/huggingface-pytorch-tgi-inference:2.0.1-tgi1.0.3-gpu-py39-cu118-ubuntu20.04\n",
-      "----------!sagemaker endpoint name: falcon-7b-2024-01-10-18-17-22\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'falcon-7b-2024-01-10-18-17-22'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "now = datetime.now()\n",
     "date_time = now.strftime(\"%Y-%m-%d-%H-%M-%S\")\n",
@@ -264,10 +272,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Invoke endpoint\n",
     "Finally, we invoke the endpoint with a sample input."
@@ -275,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
