--- a/example/llm/sagemaker_deploy.ipynb
+++ b/example/llm/sagemaker_deploy.ipynb
@@ -54,6 +54,8 @@
     }
    ],
    "source": [
+    "import sys\n",
+    "\n",
     "!{sys.executable} -m pip install -q boto3\n",
     "!{sys.executable} -m pip install -q sagemaker"
    ]
