--- a/example/server_client/server_client.ipynb
+++ b/example/server_client/server_client.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/goldpiggy/anaconda3/envs/uniflow/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/hanqi/miniconda3/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -39,20 +39,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'extract': ['ExtractPDFFlow', 'ExtractTxtFlow'],\n",
-       " 'transform': ['TransformCopyFlow',\n",
+       "{'extract': ['ExtractImageFlow',\n",
+       "  'ExtractIpynbFlow',\n",
+       "  'ExtractMarkdownFlow',\n",
+       "  'ExtractPDFFlow',\n",
+       "  'ExtractTxtFlow'],\n",
+       " 'transform': ['TransformAzureOpenAIFlow',\n",
+       "  'TransformCopyFlow',\n",
        "  'TransformHuggingFaceFlow',\n",
        "  'TransformLMQGFlow',\n",
-       "  'TransformOpenAIFlow']}"
+       "  'TransformOpenAIFlow'],\n",
+       " 'rater': ['RaterFlow']}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
