now bug free for huggingface cls autorater

--- a/example/rater/huggingface_classification.ipynb
+++ b/example/rater/huggingface_classification.ipynb
@@ -158,7 +158,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 3/3 [00:02<00:00,  1.29it/s]\n"
+      "Loading checkpoint shards: 100%|██████████| 3/3 [00:02<00:00,  1.27it/s]\n"
      ]
     }
    ],
@@ -192,111 +192,73 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:18<00:00,  6.20s/it]"
+      "100%|██████████| 3/3 [00:09<00:00,  3.10s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'output': [{'average_score': None,\n",
+      "[{'output': [{'average_score': 1.0,\n",
       "              'error': 'No errors.',\n",
-      "              'majority_vote': None,\n",
-      "              'response': [{'context': 'The answer is consistent with the fact '\n",
-      "                                       'stated in the context that the Pacific '\n",
-      "                                       'Ocean is the largest ocean on Earth.',\n",
-      "                            'question': 'Yes'}],\n",
-      "              'scores': [],\n",
-      "              'votes': [None]}],\n",
-      "  'root': <uniflow.node.Node object at 0x7f77b18ba1a0>},\n",
-      " {'output': [{'average_score': None,\n",
+      "              'majority_vote': 'yes',\n",
+      "              'response': [{'answer': 'The largest ocean on Earth is the '\n",
+      "                                      'Pacific Ocean.',\n",
+      "                            'context': 'The Pacific Ocean is the largest and '\n",
+      "                                       \"deepest of Earth's oceanic divisions. \"\n",
+      "                                       'It extends from the Arctic Ocean in '\n",
+      "                                       'the north to the Southern Ocean in the '\n",
+      "                                       'south.',\n",
+      "                            'explanation': 'The answer is consistent with the '\n",
+      "                                           'fact stated in the context that '\n",
+      "                                           'the Pacific Ocean is the largest '\n",
+      "                                           'ocean on Earth, so the answer is '\n",
+      "                                           'correct.',\n",
+      "                            'label': 'Yes',\n",
+      "                            'question': 'What is the largest ocean on Earth?'}],\n",
+      "              'scores': [1.0],\n",
+      "              'votes': ['yes']}],\n",
+      "  'root': <uniflow.node.Node object at 0x7f8d7c765b40>},\n",
+      " {'output': [{'average_score': 0.0,\n",
       "              'error': 'No errors.',\n",
-      "              'majority_vote': None,\n",
-      "              'response': [{'context': 'The answer is less than the number of '\n",
-      "                                       'plays mentioned in the context, '\n",
-      "                                       'therefore it is an incorrect answer.',\n",
-      "                            'question': 'No.'}],\n",
-      "              'scores': [],\n",
-      "              'votes': [None]}],\n",
-      "  'root': <uniflow.node.Node object at 0x7f78d52775e0>},\n",
-      " {'output': [{'average_score': None,\n",
+      "              'majority_vote': 'no',\n",
+      "              'response': [{'answer': 'Shakespeare wrote 31 plays.',\n",
+      "                            'context': 'Shakespeare, a renowned English '\n",
+      "                                       'playwright and poet, wrote 39 plays '\n",
+      "                                       'during his lifetime. His works include '\n",
+      "                                       \"famous plays like 'Hamlet' and 'Romeo \"\n",
+      "                                       \"and Juliet'.\",\n",
+      "                            'explanation': 'The answer is inconsistent with '\n",
+      "                                           'the fact stated in the context '\n",
+      "                                           'that Shakespeare wrote 39 plays, '\n",
+      "                                           'so the answer is incorrect.',\n",
+      "                            'label': 'No',\n",
+      "                            'question': 'How many plays did Shakespeare '\n",
+      "                                        'write?'}],\n",
+      "              'scores': [0.0],\n",
+      "              'votes': ['no']}],\n",
+      "  'root': <uniflow.node.Node object at 0x7f8f0901f700>},\n",
+      " {'output': [{'average_score': 0.0,\n",
       "              'error': 'No errors.',\n",
-      "              'majority_vote': None,\n",
-      "              'response': [{'context': '{\"instruction\": \"Evaluate if a given '\n",
-      "                                       'answer is appropriate based on the '\n",
-      "                                       'question and the '\n",
-      "                                       'context.\\\\n            Follow the '\n",
-      "                                       'format of the examples below, '\n",
-      "                                       'consisting of context, question, '\n",
-      "                                       'answer, explanation and label (you '\n",
-      "                                       \"must choose one from ['Yes', \"\n",
-      "                                       \"'No']).\\\\n\\\\nEnsure the response is in \"\n",
-      "                                       'json.\", \"few_shot_prompt\": '\n",
-      "                                       '[{\"context\": \"The Eiffel Tower, '\n",
-      "                                       'located in Paris, France, is one of '\n",
-      "                                       'the most famous landmarks in the '\n",
-      "                                       'world. It was constructed in 1889 and '\n",
-      "                                       'stands at a height of 324 meters.\", '\n",
-      "                                       '\"question\": \"When was the Eiffel Tower '\n",
-      "                                       'constructed?\", \"answer\": \"The Eiffel '\n",
-      "                                       'Tower was constructed in 1889.\", '\n",
-      "                                       '\"explanation\": \"The answer is '\n",
-      "                                       'consistency to the fact that Eiffel '\n",
-      "                                       'Tower was constructed in 1889 '\n",
-      "                                       'mentioned in context, so the answer is '\n",
-      "                                       'correct.\", \"label\": \"Yes\"}, '\n",
-      "                                       '{\"context\": \"Photosynthesis is a '\n",
-      "                                       'process used by plants to convert '\n",
-      "                                       'light energy into chemical energy. '\n",
-      "                                       'This process primarily occurs in the '\n",
-      "                                       'chloroplasts of plant cells.\", '\n",
-      "                                       '\"question\": \"Where does photosynthesis '\n",
-      "                                       'primarily occur in plant cells?\", '\n",
-      "                                       '\"answer\": \"Photosynthesis primarily '\n",
-      "                                       'occurs in the mitochondria of plant '\n",
-      "                                       'cells.\", \"explanation\": \"The context '\n",
-      "                                       'mentions that photosynthesis primarily '\n",
-      "                                       'occurs in the chloroplasts of plant '\n",
-      "                                       'cells but not mitochondria indicated '\n",
-      "                                       'by answer, so the answer is '\n",
-      "                                       'incorrect.\", \"label\": \"No\"}, '\n",
-      "                                       '{\"context\": \"The human brain is an '\n",
-      "                                       'intricate organ responsible for '\n",
-      "                                       'intelligence, memory, and emotions. It '\n",
-      "                                       'is made up of approximately 86 billion '\n",
-      "                                       'neurons.\", \"question\": \"What is the '\n",
-      "                                       'human brain responsible for?\", '\n",
-      "                                       '\"answer\": \"The human brain is '\n",
-      "                                       'responsible for physical movement.\"}]}',\n",
-      "                            'question': 'The answer provided in the third '\n",
-      "                                        'example is not consistent with the '\n",
-      "                                        'facts stated in the context. The '\n",
-      "                                        'human brain is indeed responsible for '\n",
-      "                                        'intelligence, memory, and emotions as '\n",
-      "                                        'stated in the context, not physical '\n",
-      "                                        'movement. Therefore, the label should '\n",
-      "                                        \"be 'No'. Here's the corrected JSON:\\n\"\n",
-      "                                        '{\\n'\n",
-      "                                        '\"context\": \"The human brain is an '\n",
-      "                                        'intricate organ responsible for '\n",
-      "                                        'intelligence, memory, and emotions. '\n",
-      "                                        'It is made up of approximately 86 '\n",
-      "                                        'billion neurons.\",\\n'\n",
-      "                                        '\"question\": \"What is the human brain '\n",
-      "                                        'responsible for?\",\\n'\n",
-      "                                        '\"answer\": \"The human brain is '\n",
-      "                                        'responsible for physical movement.\",\\n'\n",
-      "                                        '\"explanation\": \"The answer is '\n",
-      "                                        'inconsistent with the information '\n",
-      "                                        'provided in the context which states '\n",
-      "                                        'that the human brain is responsible '\n",
-      "                                        'for intelligence, memory, and '\n",
-      "                                        'emotions.\",\\n'\n",
-      "                                        '\"label\": \"No\"\\n'\n",
-      "                                        '}'}],\n",
-      "              'scores': [],\n",
-      "              'votes': [None]}],\n",
-      "  'root': <uniflow.node.Node object at 0x7f78d5277fd0>}]\n"
+      "              'majority_vote': 'no',\n",
+      "              'response': [{'answer': 'The human brain is responsible for '\n",
+      "                                      'physical movement.',\n",
+      "                            'context': 'The human brain is an intricate organ '\n",
+      "                                       'responsible for intelligence, memory, '\n",
+      "                                       'and emotions. It is made up of '\n",
+      "                                       'approximately 86 billion neurons.',\n",
+      "                            'explanation': 'The answer is inconsistent with '\n",
+      "                                           'the context which states that the '\n",
+      "                                           'human brain is responsible for '\n",
+      "                                           'intelligence, memory, and '\n",
+      "                                           'emotions, so the answer is '\n",
+      "                                           'incorrect.',\n",
+      "                            'label': 'No',\n",
+      "                            'question': 'What is the human brain responsible '\n",
+      "                                        'for?'}],\n",
+      "              'scores': [0.0],\n",
+      "              'votes': ['no']}],\n",
+      "  'root': <uniflow.node.Node object at 0x7f8f0901e3b0>}]\n"
      ]
     },
     {
@@ -321,9 +283,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'context': 'The answer is consistent with the fact stated in the context that '\n",
-      "            'the Pacific Ocean is the largest ocean on Earth.',\n",
-      " 'question': 'Yes'}\n"
+      "{'answer': 'The largest ocean on Earth is the Pacific Ocean.',\n",
+      " 'context': \"The Pacific Ocean is the largest and deepest of Earth's oceanic \"\n",
+      "            'divisions. It extends from the Arctic Ocean in the north to the '\n",
+      "            'Southern Ocean in the south.',\n",
+      " 'explanation': 'The answer is consistent with the fact stated in the context '\n",
+      "                'that the Pacific Ocean is the largest ocean on Earth, so the '\n",
+      "                'answer is correct.',\n",
+      " 'label': 'Yes',\n",
+      " 'question': 'What is the largest ocean on Earth?'}\n"
      ]
     }
    ],
@@ -340,9 +308,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data 0 has label \u001b[31mNone\u001b[0m and score \u001b[34mNone\u001b[0m\n",
-      "data 1 has label \u001b[31mNone\u001b[0m and score \u001b[34mNone\u001b[0m\n",
-      "data 2 has label \u001b[31mNone\u001b[0m and score \u001b[34mNone\u001b[0m\n"
+      "data 0 has label \u001b[31myes\u001b[0m and score \u001b[34m1.0\u001b[0m\n",
+      "data 1 has label \u001b[31mno\u001b[0m and score \u001b[34m0.0\u001b[0m\n",
+      "data 2 has label \u001b[31mno\u001b[0m and score \u001b[34m0.0\u001b[0m\n"
      ]
     }
    ],
@@ -378,7 +346,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 3/3 [00:02<00:00,  1.30it/s]\n"
+      "Loading checkpoint shards: 100%|██████████| 3/3 [00:02<00:00,  1.29it/s]\n"
      ]
     }
    ],
@@ -419,7 +387,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:08<00:00,  2.97s/it]"
+      "100%|██████████| 3/3 [00:08<00:00,  2.99s/it]"
      ]
     },
     {
@@ -474,7 +442,7 @@
       "                           'label: Yes'],\n",
       "              'scores': [1.0],\n",
       "              'votes': ['yes']}],\n",
-      "  'root': <uniflow.node.Node object at 0x7f7774149cc0>},\n",
+      "  'root': <uniflow.node.Node object at 0x7f8d7c1ba3e0>},\n",
       " {'output': [{'average_score': 0.0,\n",
       "              'error': 'No errors.',\n",
       "              'majority_vote': 'no',\n",
@@ -521,7 +489,7 @@
       "                           'label: No'],\n",
       "              'scores': [0.0],\n",
       "              'votes': ['no']}],\n",
-      "  'root': <uniflow.node.Node object at 0x7f777415feb0>},\n",
+      "  'root': <uniflow.node.Node object at 0x7f8d7c1c2bf0>},\n",
       " {'output': [{'average_score': 0.0,\n",
       "              'error': 'No errors.',\n",
       "              'majority_vote': 'no',\n",
@@ -570,7 +538,7 @@
       "                           'label: No'],\n",
       "              'scores': [0.0],\n",
       "              'votes': ['no']}],\n",
-      "  'root': <uniflow.node.Node object at 0x7f78d5274f10>}]\n"
+      "  'root': <uniflow.node.Node object at 0x7f8f0901f970>}]\n"
      ]
     },
     {
