psql for new flow

--- a/exam/server_client.ipynb
+++ b/exam/server_client.ipynb
@@ -31,28 +31,36 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<uniflow.node.Node at 0x7f28a419a4d0>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "input = {\"How are you?\": \"Fine.\", \"Who are you?\": \"I am Bob.\", \"Where are you?\": \"I am at home.\", \"What are you doing?\": \"Coding.\"}\n",
     "root = Node(name=\"root\", value_dict=input)\n",
-    "flow = ExpandReduceFlow()\n",
-    "flow.run(root)"
+    "flow = ExpandReduceFlow()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<uniflow.node.Node at 0x7f8810754dd0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flow.run(root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +146,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f288f7e0ed0>"
+       "<graphviz.graphs.Digraph at 0x7f8810757d90>"
       ]
      },
      "metadata": {},
