--- a/example/transform/huggingface_model_json.ipynb
+++ b/example/transform/huggingface_model_json.ipynb
@@ -236,33 +236,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|██████████| 3/3 [00:04<00:00,  1.55s/it]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# config = TransformHuggingFaceConfig(\n",
-    "#     prompt_template=guided_prompt,\n",
-    "#     model_config=HuggingfaceModelConfig(batch_size=64))\n",
-    "# client = TransformClient(config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading checkpoint shards: 100%|██████████| 3/3 [00:04<00:00,  1.42s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 3/3 [00:04<00:00,  1.52s/it]\n"
      ]
     }
    ],
    "source": [
     "config = TransformQAHuggingFaceJsonFormatConfig(\n",
-    "    prompt_template=guided_prompt\n",
+    "    prompt_template=guided_prompt,\n",
+    "    model_config=HuggingfaceModelConfig(\n",
+    "            batch_size=64,\n",
+    "            response_start_key=\"question\", response_format={\"type\": \"json_object\"}\n",
+    "        )\n",
     ")\n",
     "client = TransformClient(config)"
    ]
@@ -276,23 +260,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/400 [00:00<?, ?it/s]"
+      "  0%|          | 0/7 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  2%|▎         | 10/400 [03:01<2:03:31, 19.01s/it]/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/pipelines/base.py:1101: UserWarning: You seem to be using the pipelines sequentially on GPU. In order to maximize efficiency please use a dataset\n",
+      "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/generation/configuration_utils.py:389: UserWarning: `do_sample` is set to `False`. However, `temperature` is set to `0.0` -- this flag is only used in sample-based generation modes. You should set `do_sample=True` or unset `temperature`.\n",
       "  warnings.warn(\n",
-      "100%|██████████| 400/400 [2:00:17<00:00, 18.04s/it]  \n"
+      "100%|██████████| 7/7 [04:39<00:00, 39.94s/it]\n"
      ]
     }
    ],
@@ -311,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -329,10 +313,11 @@
       "            'valuable. W e also continue to vigorously protect our '\n",
       "            'intellectual property, including trademarks, patents and trade '\n",
       "            'secrets against third-party infringement and misappropriation.',\n",
-      " 'question': 'Which intellectual properties does the company actively apply '\n",
-      "             'for and register?',\n",
-      " 'answer': 'The company applies for and registers trademarks, inventions, '\n",
-      "           'innovations, and designs that it deems valuable.'}\n"
+      " 'question': 'Which intellectual property rights does the company actively '\n",
+      "             'pursue and protect?',\n",
+      " 'answer': 'The company applies for and registers trademarks, utilizes patents '\n",
+      "           'for inventions and innovations, holds copyrights, and guards trade '\n",
+      "           'secrets.'}\n"
      ]
     }
    ],
@@ -342,29 +327,6 @@
     "result = output[0]['output'][0]['response'][0] ## we only postprocess the first output\n",
     "\n",
     "pprint(result, sort_dicts=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import re\n",
-    "# from pprint import pprint\n",
-    "\n",
-    "# keywords = [\"context:\", \"question:\", \"answer:\"]\n",
-    "# pattern = '|'.join(map(re.escape, keywords))\n",
-    "\n",
-    "# o = output[0]['output'][0]['response'][0] ## we only postprocess the first output\n",
-    "# segments = [segment for segment in re.split(pattern, o) if segment.strip()]\n",
-    "# result = {\n",
-    "#     \"context\": segments[-3],\n",
-    "#     \"question\": segments[-2],\n",
-    "#     \"answer\": segments[-1]\n",
-    "# }\n",
-    "\n",
-    "# pprint(result, sort_dicts=False)"
    ]
   },
   {
@@ -385,21 +347,23 @@
     "Here are the results:\n",
     "\n",
     "- batch_size = 1\n",
-    "    <!-- 100%|██████████| 400/400 [20:35<00:00,  3.09s/it] -->\n",
     "    100%|██████████| 400/400 [2:00:17<00:00, 18.04s/it]\n",
+    "- batch_size = 2\n",
+    "    100%|██████████| 200/200 [1:14:40<00:00, 22.40s/it]\n",
+    "- batch_size = 4\n",
+    "    100%|██████████| 100/100 [37:20<00:00, 22.41s/it]\n",
     "- batch_size = 8\n",
-    "    100%|██████████| 50/50 [15:00<00:00, 18.02s/it]\n",
+    "    100%|██████████| 50/50 [25:32<00:00, 30.65s/it]\n",
     "- batch_size = 16\n",
-    "    100%|██████████| 25/25 [08:26<00:00, 20.25s/it]\n",
+    "    100%|██████████| 25/25 [13:46<00:00, 33.05s/it]\n",
     "- batch_size = 32\n",
-    "    100%|██████████| 13/13 [05:13<00:00, 24.09s/it]\n",
+    "    100%|██████████| 13/13 [07:52<00:00, 36.38s/it]\n",
     "- batch_size = 64\n",
-    "    100%|██████████| 7/7 [03:42<00:00, 31.75s/it]\n",
-    "- batch_size = 128\n",
-    "    100%|██████████| 4/4 [02:57<00:00, 44.33s/it]\n",
+    "    100%|██████████| 7/7 [04:39<00:00, 39.94s/it]\n",
+    "- batch_size = 128: OOM\n",
     "- batch_size = 256: OOM\n",
     "\n",
-    "As you can see, the processing time is much shorter if `batch_size=128` compared with `batch_size=1`. However, it might lead to OOM error if `batch_size` is too large."
+    "As you can see, the processing time is much shorter if `batch_size=64` compared with `batch_size=1`. However, it might lead to OOM error if `batch_size` is too large."
    ]
   }
  ],
