fix notebook to fit updated rater

--- a/example/rater/bedrock_classification.ipynb
+++ b/example/rater/bedrock_classification.ipynb
@@ -436,9 +436,9 @@
    ],
    "source": [
     "for idx, o in enumerate(output):\n",
-    "    majority_vote = o['output'][0]['majority_vote']\n",
-    "    average_score = o['output'][0]['average_score']\n",
-    "    print(f\"data {idx} has majority vote \\033[31m{majority_vote}\\033[0m and average score \\033[34m{average_score}\\033[0m\")"
+    "    majority_vote = o['output'][0]['response'][0]['majority_vote']\n",
+    "    average_score = o['output'][0]['response'][0]['average_score']\n",
+    "    print(f\"data {idx} has label \\033[31m{majority_vote}\\033[0m and score \\033[34m{average_score}\\033[0m\")"
    ]
   },
   {
